Added new web route for count of services given filters
